--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,9 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      
-      run: 
-        cd Código\Backend
-        dotnet restore
+      run:
+            cd "Código\Backend"
+            dotnet restore
       
     - name: Build
       run: dotnet build --configuration Release --no-restore
