--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,9 +28,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: |
-        cd "Código\Backend"
-        dotnet restore
+      run: dotnet restore Código/Backend/PharmaGo.sln
       
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore Código/Backend/PharmaGo.sln
