--- a/Código/Frontend/package.json
+++ b/Código/Frontend/package.json
@@ -24,6 +24,7 @@
     "@coreui/icons-angular": "^4.2.4",
     "angularx-qrcode": "^14.0.0",
     "bootstrap": "^5.2.2",
+    "forms": "^1.3.2",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "save": "^2.9.0",
